--- a/sandbox_pivoted_df.ipynb
+++ b/sandbox_pivoted_df.ipynb
@@ -649,19 +649,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "74a016f2-8a15-45cd-bf92-311b356317fb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Timestamp('2024-12-05 00:00:00-0500', tz='America/New_York'), 'value')\n",
+      "symbol\n",
+      "1INCH-USDT-SWAP      0.51550\n",
+      "AAVE-USDT-SWAP     246.57000\n",
+      "ACE-USDT-SWAP        3.41200\n",
+      "ACH-USDT-SWAP        0.03676\n",
+      "ACT-USDT-SWAP        0.56640\n",
+      "                     ...    \n",
+      "ZIL-USDT-SWAP        0.03306\n",
+      "ZK-USDT-SWAP         0.22650\n",
+      "ZKJ-USDT-SWAP            NaN\n",
+      "ZRO-USDT-SWAP        6.20500\n",
+      "ZRX-USDT-SWAP        0.64580\n",
+      "Name: (2024-12-05 00:00:00-05:00, value), Length: 210, dtype: float64\n",
+      "\n",
+      "(Timestamp('2024-12-05 00:00:00-0500', tz='America/New_York'), 'ch')\n",
+      "symbol\n",
+      "1INCH-USDT-SWAP    0.0\n",
+      "AAVE-USDT-SWAP     0.0\n",
+      "ACE-USDT-SWAP      0.0\n",
+      "ACH-USDT-SWAP      0.0\n",
+      "ACT-USDT-SWAP      0.0\n",
+      "                  ... \n",
+      "ZIL-USDT-SWAP      0.0\n",
+      "ZK-USDT-SWAP       0.0\n",
+      "ZKJ-USDT-SWAP      NaN\n",
+      "ZRO-USDT-SWAP      0.0\n",
+      "ZRX-USDT-SWAP      0.0\n",
+      "Name: (2024-12-05 00:00:00-05:00, ch), Length: 210, dtype: float64\n",
+      "\n",
+      "(Timestamp('2024-12-05 00:00:00-0500', tz='America/New_York'), 'ch_max')\n",
+      "symbol\n",
+      "1INCH-USDT-SWAP    0.0\n",
+      "AAVE-USDT-SWAP     0.0\n",
+      "ACE-USDT-SWAP      0.0\n",
+      "ACH-USDT-SWAP      0.0\n",
+      "ACT-USDT-SWAP      0.0\n",
+      "                  ... \n",
+      "ZIL-USDT-SWAP      0.0\n",
+      "ZK-USDT-SWAP       0.0\n",
+      "ZKJ-USDT-SWAP      0.0\n",
+      "ZRO-USDT-SWAP      0.0\n",
+      "ZRX-USDT-SWAP      0.0\n",
+      "Name: (2024-12-05 00:00:00-05:00, ch_max), Length: 210, dtype: float64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cnt = 0\n",
+    "for i, row in df_feature.iterrows():\n",
+    "    print(i)\n",
+    "    print(row)\n",
+    "    print('')\n",
+    "    cnt += 1\n",
+    "    if cnt > 2:\n",
+    "        break"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "1728af4e-a59c-4771-8d31-fd5ff23737a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>symbol</th>\n",
+       "      <th>1INCH-USDT-SWAP</th>\n",
+       "      <th>AAVE-USDT-SWAP</th>\n",
+       "      <th>ACE-USDT-SWAP</th>\n",
+       "      <th>ACH-USDT-SWAP</th>\n",
+       "      <th>ACT-USDT-SWAP</th>\n",
+       "      <th>ADA-USDT-SWAP</th>\n",
+       "      <th>AEVO-USDT-SWAP</th>\n",
+       "      <th>AGLD-USDT-SWAP</th>\n",
+       "      <th>AIDOGE-USDT-SWAP</th>\n",
+       "      <th>ALGO-USDT-SWAP</th>\n",
+       "      <th>...</th>\n",
+       "      <th>XTZ-USDT-SWAP</th>\n",
+       "      <th>YFI-USDT-SWAP</th>\n",
+       "      <th>YGG-USDT-SWAP</th>\n",
+       "      <th>ZENT-USDT-SWAP</th>\n",
+       "      <th>ZETA-USDT-SWAP</th>\n",
+       "      <th>ZIL-USDT-SWAP</th>\n",
+       "      <th>ZK-USDT-SWAP</th>\n",
+       "      <th>ZKJ-USDT-SWAP</th>\n",
+       "      <th>ZRO-USDT-SWAP</th>\n",
+       "      <th>ZRX-USDT-SWAP</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>timestamp</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2024-12-05 00:00:00-05:00</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-05 00:01:00-05:00</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001663</td>\n",
+       "      <td>0.000879</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.009534</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000911</td>\n",
+       "      <td>0.00007</td>\n",
+       "      <td>0.000814</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.001546</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.002113</td>\n",
+       "      <td>0.001815</td>\n",
+       "      <td>0.001613</td>\n",
+       "      <td>0.001512</td>\n",
+       "      <td>0.001325</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000645</td>\n",
+       "      <td>0.00031</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 210 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "symbol                     1INCH-USDT-SWAP  AAVE-USDT-SWAP  ACE-USDT-SWAP  \\\n",
+       "timestamp                                                                   \n",
+       "2024-12-05 00:00:00-05:00              0.0        0.000000       0.000000   \n",
+       "2024-12-05 00:01:00-05:00              0.0        0.001663       0.000879   \n",
+       "\n",
+       "symbol                     ACH-USDT-SWAP  ACT-USDT-SWAP  ADA-USDT-SWAP  \\\n",
+       "timestamp                                                                \n",
+       "2024-12-05 00:00:00-05:00            0.0       0.000000            0.0   \n",
+       "2024-12-05 00:01:00-05:00            0.0       0.009534            0.0   \n",
+       "\n",
+       "symbol                     AEVO-USDT-SWAP  AGLD-USDT-SWAP  AIDOGE-USDT-SWAP  \\\n",
+       "timestamp                                                                     \n",
+       "2024-12-05 00:00:00-05:00        0.000000         0.00000          0.000000   \n",
+       "2024-12-05 00:01:00-05:00        0.000911         0.00007          0.000814   \n",
+       "\n",
+       "symbol                     ALGO-USDT-SWAP  ...  XTZ-USDT-SWAP  YFI-USDT-SWAP  \\\n",
+       "timestamp                                  ...                                 \n",
+       "2024-12-05 00:00:00-05:00             0.0  ...       0.000000            0.0   \n",
+       "2024-12-05 00:01:00-05:00             0.0  ...       0.001546            0.0   \n",
+       "\n",
+       "symbol                     YGG-USDT-SWAP  ZENT-USDT-SWAP  ZETA-USDT-SWAP  \\\n",
+       "timestamp                                                                  \n",
+       "2024-12-05 00:00:00-05:00       0.000000        0.000000        0.000000   \n",
+       "2024-12-05 00:01:00-05:00       0.002113        0.001815        0.001613   \n",
+       "\n",
+       "symbol                     ZIL-USDT-SWAP  ZK-USDT-SWAP  ZKJ-USDT-SWAP  \\\n",
+       "timestamp                                                               \n",
+       "2024-12-05 00:00:00-05:00       0.000000      0.000000            0.0   \n",
+       "2024-12-05 00:01:00-05:00       0.001512      0.001325            0.0   \n",
+       "\n",
+       "symbol                     ZRO-USDT-SWAP  ZRX-USDT-SWAP  \n",
+       "timestamp                                                \n",
+       "2024-12-05 00:00:00-05:00       0.000000        0.00000  \n",
+       "2024-12-05 00:01:00-05:00       0.000645        0.00031  \n",
+       "\n",
+       "[2 rows x 210 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_feature.xs('ch_max', level='feature').head(2)"
+   ]
   },
   {
    "cell_type": "code",
@@ -673,19 +902,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e70f2d93-7296-43a7-87df-aa2bd5031bdd",
+   "execution_count": 34,
+   "id": "d3bf0bd1-fa50-4dfb-b28c-05fb96ec663f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for timestamp in df_feature.index.get_level_values('timestamp'):\n",
+    "    row = df_feature.xs(timestamp, level=\"timestamp\")\n",
+    "    feature = {v: row.xs(v).values for v in row.index.values}    \n",
+    "    print('')\n",
+    "    break"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dbc0e183-c4fd-4e3e-a3fc-447b2e8b1429",
+   "execution_count": 47,
+   "id": "821d9c4e-9ae7-46c9-b762-698d5c6202ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 4])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "98847c35-a250-4dca-a095-b71259a78c3f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "z = np.array([1,-2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "dbc0e183-c4fd-4e3e-a3fc-447b2e8b1429",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1, -2,  4])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = np.where(z == 3, z+1, z)\n",
+    "z"
+   ]
   },
   {
    "cell_type": "code",
